# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: context.cpp  context.h  cpu.cpp  cpu.h  main.cpp
